# speak_out_loud_gazebo_tests

./: README.md
mybot_2dnav/config/: move_base_params.yaml
mybot_config/launch/: mybot_gazebo.launch
mybot_gazebo/worlds/: mybot.world
mybot_speak_out_loud/: CMakeLists.txt  package.xml
mybot_speak_out_loud/launch/: mybot_speak_out_loud.launch
mybot_speak_out_loud/scripts/: mybot_speak_out_loud.py
